[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[options]
include_package_data = True
install_requires =
    Django>=1.9
    django-timezone-field>=2.0rc1
    django-localflavor>=1.1
    swapper>=0.3.0
    django-recaptcha
